fix a layout bug on the home page

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -223,7 +223,7 @@ h3 {
   .challenge {
     display: inline-block;
     border: 2px solid orange;
-    margin-right: 47px;
+    margin-right: 27px;
   }
 
   .challenge:last-child {
